# AGENT-ECON-AI

./: .env.mainnet  README.md  foundry.toml  package.json  test-e2e-v2.mjs
broadcast/DeployV2.s.sol/8453/: run-latest.json
broadcast/DeployV2.s.sol/84532/: run-latest.json
docs/: GRANT-APPLICATION.md
frontend/src/app/contact/: page.tsx
frontend/src/app/faq/: page.tsx
frontend/src/app/for-agents/: page.tsx
frontend/src/app/getting-started/: page.tsx
frontend/src/app/staking/: page.tsx
frontend/src/components/: footer.tsx  navbar.tsx
frontend/src/lib/: api.ts  contracts.ts
integrations/autoresearch/: README.md  agentecon-bridge.py
marketing/: grok-video-prompts.md  grok-video-v2.md  reddit-posts-draft.md  show-hn-draft.md
script/: DeployV2.s.sol
scripts/: .monitor-state.json  demo-agents.mjs  monitor-activity.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/agentecon/: __init__.py  client.py  types.py
sdk/python/agentecon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ABBCoreV2.sol  AgentIdentity8004.sol  ReputationRegistry8004.sol  ValidatorPoolV2.sol
test/: ERC8004.t.sol  SecurityAudit.t.sol  ValidatorPoolV2.t.sol
